feat(sdk): implement stateful SIP engine with auto-ack and sdp negotiation
- Renamed project to `sentiric-telecom-client-sdk`.
- Implemented a state machine (Idle, Dialing, Connected) to manage call lifecycle.
- Added automatic ACK generation upon receiving 200 OK to ensure handshake completion.
- Implemented SDP parsing to dynamically discover the remote RTP target, fixing media latching issues.
- Integrated `cpal` for hardware audio I/O within a dedicated RTP engine.
- Cleaned up all compiler warnings and errors.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,23 @@
 [package]
-name = "sentiric-sip-uac-core"
-version = "0.3.0"
+name = "sentiric-telecom-client-sdk" # YENİ İSİM
+version = "0.1.0"
 edition = "2021"
-description = "Core logic library for SIP User Agent Clients (CLI & Mobile)."
+description = "Stateful SIP/RTP Engine for Mobile and Desktop Clients."
 authors = ["Sentiric Team"]
 license = "AGPL-3.0"
 
 [dependencies]
-# --- THE IRON CORE ---
-sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git", tag = "v1.4.1" }
-sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.4.3" }
+# --- THE IRON CORE (v1.5.0) ---
+sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", branch = "main" }
+sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git",  branch = "main" }
 
-# --- Async & Utilities ---
+# --- Async & Logic ---
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 tracing = "0.1"
 rand = "0.8"
-# --- Ses donanımı bağımlılıkları
+thiserror = "1.0"
+
+# --- Audio Hardware ---
 cpal = "0.15"
-ringbuf = "0.3" # Bu sürümde kalınmalı
+ringbuf = "0.3"
